# flight-ibe

./: .env.example  .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  STRATEGIC_PLAN.md  package-lock.json  package.json  start-dev.bat
.claude/: settings.local.json
crates/api-server/: Cargo.toml
crates/api-server/migrations/: 001_initial_schema.sql
crates/api-server/src/: amadeus.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  sse.rs
crates/api-server/src/ndc/: client.rs  combined.rs  enterprise.rs  mod.rs  models.rs  self_service.rs  traits.rs
docs/: amadeus-api-reference.md
frontend/: index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/booking/: page.tsx
frontend/src/hooks/: use-flights.ts  use-pricing-stream.ts  use-upsell-stream.ts
frontend/src/lib/: airlines.ts  airports.ts  api-client.ts  flight-matcher.ts  utils.test.ts  utils.ts
frontend/src/pages/: booking-page.tsx  results-page.tsx
frontend/src/queries/: flight-queries.ts
frontend/src/stores/: booking-store.test.ts  booking-store.ts  search-store.ts  theme-store.ts
frontend/src/types/: flight.ts
frontend/test-results/: .last-run.json
frontend/tests/: booking-error-check.spec.ts  booking-flow.spec.ts  react-error-detection.spec.ts
src/components/flight/: search-form.tsx
(+57 files in other folders)
