[package]
name = "api-server"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.47.2", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
dotenv = "0.15"
redis = { version = "0.27", features = ["tokio-comp"] }
base64 = "0.22"

urlencoding = "2.1.3"
